; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pwm/extr_pwmbus.c_pwmbus_read_ivar.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pwm/extr_pwmbus.c_pwmbus_read_ivar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pwmbus_ivars = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i64*)* @pwmbus_read_ivar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pwmbus_read_ivar(i32 %0, i32 %1, i32 %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64*, align 8
  %10 = alloca %struct.pwmbus_ivars*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i64* %3, i64** %9, align 8
  %11 = load i32, i32* %7, align 4
  %12 = call %struct.pwmbus_ivars* @device_get_ivars(i32 %11)
  store %struct.pwmbus_ivars* %12, %struct.pwmbus_ivars** %10, align 8
  %13 = load i32, i32* %8, align 4
  switch i32 %13, label %20 [
    i32 128, label %14
  ]

14:                                               ; preds = %4
  %15 = load %struct.pwmbus_ivars*, %struct.pwmbus_ivars** %10, align 8
  %16 = getelementptr inbounds %struct.pwmbus_ivars, %struct.pwmbus_ivars* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i64*, i64** %9, align 8
  %19 = bitcast i64* %18 to i32*
  store i32 %17, i32* %19, align 4
  br label %22

20:                                               ; preds = %4
  %21 = load i32, i32* @EINVAL, align 4
  store i32 %21, i32* %5, align 4
  br label %23

22:                                               ; preds = %14
  store i32 0, i32* %5, align 4
  br label %23

23:                                               ; preds = %22, %20
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local %struct.pwmbus_ivars* @device_get_ivars(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
